--- a/index.html
+++ b/index.html
@@ -2,40 +2,91 @@
 <html>
 
 <head>
-    <title>Vahid Plojovic</title>
+    <title>Vezbanje 6</title>
     <link rel="stylesheet" href="stilovi.css">
 </head>
 
 <body>
     <header>
-    
+        <nav>
+            <a href="index.html">Pocetna</a>
+            <a href="kontakt.html">Kontakt</a>
+        </nav>
     </header>
+
     <main>
         <div>
-            <P>Ja sam Vahid Plojovic.</P>
-            <hr>
-            <p>Imam trinaest godina.</p>
-            <hr>
-            <p>Zivim u Novom Pazaru.</p>
-            <hr>
-            <p>Idem u Osnovnu skolu "Rifat Burdzevic Trso", sedmi sam razred.</p>
-            <hr>
-            <p>Bavim se programiranjem.</p>
-            <hr>
-            <p>Treniram kosarku.</p>
-
-        </div>
-        <div class="klasa">
-            <a href="https://www.instagram.com/_vahid_plojovic_/">Moj instagram profil</a>
-
-            <a href="https://www.instagram.com/_vahid_plojovic_/" target="_blank"><img height="350px" src="profilna.jpg"
-                    alt="slika nije ucitana."></a>
+            <p class="text1">Dobro dosli na moju stranicu.</p>
+            <p class="text2">Dobro dosli na moju stranicu.</p>
+            <p class="text3">Dobro dosli na moju stranicu.</p>
+            <p class="text4">Dobro dosli na moju stranicu.</p>
+            <p class="text5">Dobro dosli na moju stranicu.</p>
         </div>
 
+        <div>
+            <table class="tabela">
+                <tr>
+                    <th>Ime</th>
+                    <th>Prezime</th>
+                    <th>Godine</th>
+                    <th>Pol</th>
+                    <th>Mesto</th>
+                    <th>Email</th>
+                    <th>Kontakt</th>
+                </tr>
+                <tr>
+                    <td>Vahid</td>
+                    <td>Plojovic</td>
+                    <td>13</td>
+                    <td>Muski</td>
+                    <td>Novi Pazar</td>
+                    <td>vahidvaki01@gmail.com</td>
+                    <td>0656849051</td>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table class="galerija">
+                <tr>
+                    <td><a href="slika.jpg" target="_blank"><img class="animacija" src="slika.jpg"
+                                alt="slika nije ucitana" height="200px"></a></td>
+                    <td><a href="slika.jpg" target="_blank"><img class="animacija" src="slika.jpg"
+                                alt="slika nije ucitana" height="200px"></a></td>
+                    <td><a href="slika.jpg" target="_blank"><img class="animacija" src="slika.jpg"
+                                alt="slika nije ucitana" height="200px"></a></td>
+                    <td><a href="slika.jpg" target="_blank"><img class="animacija" src="slika.jpg"
+                                alt="slika nije ucitana" height="200px"></a></td>
+                    <td><a href="slika.jpg" target="_blank"><img class="animacija" src="slika.jpg"
+                                alt="slika nije ucitana" height="200px"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="slika.jpg" target="_blank"><img class="animacija" src="slika.jpg"
+                                alt="slika nije ucitana" height="200px"></a></td>
+                    <td><a href="slika.jpg" target="_blank"><img class="animacija" src="slika.jpg"
+                                alt="slika nije ucitana" height="200px"></a></td>
+                    <td><a href="slika.jpg" target="_blank"><img class="animacija" src="slika.jpg"
+                                alt="slika nije ucitana" height="200px"></a></td>
+                    <td><a href="slika.jpg" target="_blank"><img class="animacija" src="slika.jpg"
+                                alt="slika nije ucitana" height="200px"></a></td>
+                    <td><a href="slika.jpg" target="_blank"><img class="animacija" src="slika.jpg"
+                                alt="slika nije ucitana" height="200px"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="slika.jpg" target="_blank"><img class="animacija" src="slika.jpg"
+                                alt="slika nije ucitana" height="200px"></a></td>
+                    <td><a href="slika.jpg" target="_blank"><img class="animacija" src="slika.jpg"
+                                alt="slika nije ucitana" height="200px"></a></td>
+                    <td><a href="slika.jpg" target="_blank"><img class="animacija" src="slika.jpg"
+                                alt="slika nije ucitana" height="200px"></a></td>
+                    <td><a href="slika.jpg" target="_blank"><img class="animacija" src="slika.jpg"
+                                alt="slika nije ucitana" height="200px"></a></td>
+                    <td><a href="slika.jpg" target="_blank"><img class="animacija" src="slika.jpg"
+                                alt="slika nije ucitana" height="200px"></a></td>
+                </tr>
+            </table>
+        </div>
     </main>
-    <footer>
-        <p class="klassa">Sva prava zadrzava Vahid Plojovic.</p>
-    </footer>
+    <footer></footer>
 </body>
 
 </html>
